@@ -5,10 +5,12 @@ package com.jetbrains.youtrack.db.internal.core.sql.parser;
 import com.jetbrains.youtrack.db.api.exception.CommandExecutionException;
 import com.jetbrains.youtrack.db.api.query.Result;
 import com.jetbrains.youtrack.db.api.record.Identifiable;
+import com.jetbrains.youtrack.db.api.schema.SchemaClass;
 import com.jetbrains.youtrack.db.internal.core.command.CommandContext;
-import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionInternal;
+import com.jetbrains.youtrack.db.internal.core.db.DatabaseSessionEmbedded;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.AggregationContext;
 import com.jetbrains.youtrack.db.internal.core.sql.executor.ResultInternal;
+import java.util.Collection;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
@@ -28,6 +30,7 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
     super(p, id);
   }
 
+  @Override
   public void toString(Map<Object, Object> params, StringBuilder builder) {
     if (functionCall != null) {
       functionCall.toString(params, builder);
@@ -38,6 +41,7 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
     }
   }
 
+  @Override
   public void toGenericStatement(StringBuilder builder) {
     if (functionCall != null) {
       functionCall.toGenericStatement(builder);
@@ -74,7 +78,7 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
     throw new UnsupportedOperationException();
   }
 
-  public boolean isIndexedFunctionCall(DatabaseSessionInternal session) {
+  public boolean isIndexedFunctionCall(DatabaseSessionEmbedded session) {
     if (functionCall != null) {
       return functionCall.isIndexedFunctionCall(session);
     }
@@ -95,6 +99,25 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
           && functionCall.params.isEmpty();
     }
     return false;
+  }
+
+  public boolean isGraphNavigationFunction(DatabaseSessionEmbedded session) {
+    if (functionCall != null) {
+      return functionCall.isGraphNavigationFunction(session);
+    }
+
+    return false;
+  }
+
+
+  @Nullable
+  public Collection<String> getGraphNavigationFunctionProperties(CommandContext ctx,
+      SchemaClass schemaClass) {
+    if (functionCall != null) {
+      return functionCall.getGraphNavigationFunctionProperties(ctx, schemaClass);
+    }
+
+    return null;
   }
 
   public long estimateIndexedFunction(
@@ -123,8 +146,6 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
    *
    * @param target   the query target
    * @param context  the execution context
-   * @param operator
-   * @param right
    * @return true if current expression is an indexed funciton AND that function can also be
    * executed without using the index, false otherwise
    */
@@ -143,8 +164,6 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
    *
    * @param target   the query target
    * @param context  the execution context
-   * @param operator
-   * @param right
    * @return true if current expression involves an indexed function AND that function can be used
    * on this target, false otherwise
    */
@@ -187,9 +206,9 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
   public SQLExpression getExpandContent() {
     if (functionCall.getParams().size() != 1) {
       throw new CommandExecutionException(
-          "Invalid expand expression: " + functionCall.toString());
+          "Invalid expand expression: " + functionCall);
     }
-    return functionCall.getParams().get(0);
+    return functionCall.getParams().getFirst();
   }
 
   public boolean needsAliases(Set<String> aliases) {
@@ -199,7 +218,7 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
     return collection != null && collection.needsAliases(aliases);
   }
 
-  public boolean isAggregate(DatabaseSessionInternal session) {
+  public boolean isAggregate(DatabaseSessionEmbedded session) {
     if (functionCall != null && functionCall.isAggregate(session)) {
       return true;
     }
@@ -252,6 +271,7 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
     throw new CommandExecutionException(ctx.getDatabaseSession(), "cannot aggregate on " + this);
   }
 
+  @Override
   public SQLLevelZeroIdentifier copy() {
     var result = new SQLLevelZeroIdentifier(-1);
     result.functionCall = functionCall == null ? null : functionCall.copy();
@@ -311,14 +331,14 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
     return collection;
   }
 
-  public Result serialize(DatabaseSessionInternal db) {
-    var result = new ResultInternal(db);
+  public Result serialize(DatabaseSessionEmbedded session) {
+    var result = new ResultInternal(session);
     if (functionCall != null) {
-      result.setProperty("functionCall", functionCall.serialize(db));
+      result.setProperty("functionCall", functionCall.serialize(session));
     }
     result.setProperty("self", self);
     if (collection != null) {
-      result.setProperty("collection", collection.serialize(db));
+      result.setProperty("collection", collection.serialize(session));
     }
     return result;
   }
@@ -347,9 +367,9 @@ public class SQLLevelZeroIdentifier extends SimpleNode {
     }
   }
 
-  public boolean isCacheable(DatabaseSessionInternal session) {
+  public boolean isCacheable(DatabaseSessionEmbedded session) {
     if (functionCall != null) {
-      return functionCall.isCacheable();
+      return functionCall.isCacheable(session);
     }
     if (collection != null) {
       return collection.isCacheable(session);
