@@ -5,18 +5,12 @@ import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
+import com.jetbrains.youtrack.db.api.common.query.BasicResult;
 import com.jetbrains.youtrack.db.api.exception.CommandExecutionException;
 import com.jetbrains.youtrack.db.api.exception.DatabaseException;
-import com.jetbrains.youtrack.db.api.query.Result;
-import com.jetbrains.youtrack.db.api.record.DBRecord;
-import com.jetbrains.youtrack.db.api.record.Entity;
-import com.jetbrains.youtrack.db.api.schema.PropertyType;
+import com.jetbrains.youtrack.db.api.remote.query.RemoteResult;
 import com.jetbrains.youtrack.db.internal.core.id.RecordId;
-import com.jetbrains.youtrack.db.internal.core.record.impl.EntityImpl;
 import com.jetbrains.youtrack.db.internal.server.BaseServerMemoryDatabase;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
 import org.junit.Assert;
 import org.junit.Test;
 
@@ -27,25 +21,44 @@ public class RemoteQuerySupportTest extends BaseServerMemoryDatabase {
 
   private int oldPageSize;
 
+  @Override
   public void beforeTest() {
     super.beforeTest();
-    session.createClass("Some");
-    session.createVertexClass("SomeVertex");
-    session.createAbstractClass("AbstractSome");
+
+    session.executeSQLScript("""
+        create class Some;
+        create class SomeVertex extends V;
+        create class AbstractSome abstract;
+        
+        create class EmbeddedClass abstract;
+        create property Some.emb EMBEDDED EmbeddedClass;
+        
+        create property EmbeddedClass.secEmb EMBEDDED;
+        
+        create property Some.map EMBEDDEDMAP EMBEDDED;
+        create property Some.list EMBEDDEDLIST EMBEDDED;
+        """);
+
     oldPageSize = QUERY_REMOTE_RESULTSET_PAGE_SIZE.getValueAsInteger();
     QUERY_REMOTE_RESULTSET_PAGE_SIZE.setValue(10);
   }
 
   @Test
   public void testQuery() {
-    for (var i = 0; i < 150; i++) {
-      session.begin();
-      var doc = ((EntityImpl) session.newEntity("Some"));
-      doc.setProperty("prop", "value");
-      session.commit();
-    }
+    session.executeSQLScript("""
+        begin;
+        let $i = 0;
+        
+        while ($i < 150) {
+          insert into Some set prop = "value";
+          let $i = $i + 1;
+        }
+        
+        commit;
+        """);
 
     var res = session.query("select from Some");
+
     for (var i = 0; i < 150; i++) {
       assertTrue(res.hasNext());
       var item = res.next();
@@ -55,50 +68,65 @@ public class RemoteQuerySupportTest extends BaseServerMemoryDatabase {
 
   @Test
   public void testCommandSelect() {
-    for (var i = 0; i < 150; i++) {
-      session.begin();
-      var doc = ((EntityImpl) session.newEntity("Some"));
-      doc.setProperty("prop", "value");
-      session.commit();
-    }
+    session.command("begin");
+    session.executeSQLScript("""
+        let $i = 0;
+        
+        while ($i < 150) {
+          insert into Some set prop = "value";
+          let $i = $i + 1;
+        }
+        """);
 
-    var tx = session.begin();
-    var res = tx.execute("select from Some");
+    var res = session.query("select from Some");
     for (var i = 0; i < 150; i++) {
       assertTrue(res.hasNext());
       var item = res.next();
       assertEquals("value", item.getProperty("prop"));
     }
-    tx.commit();
+
+    session.command("commit");
   }
 
   @Test
   public void testCommandInsertWithPageOverflow() {
-    for (var i = 0; i < 150; i++) {
-      session.begin();
-      var doc = ((EntityImpl) session.newVertex("SomeVertex"));
-      doc.setProperty("prop", "value");
-      session.commit();
-    }
+    session.executeSQLScript("""
+        begin;
+        let $i = 0;
+        
+        while ($i < 150) {
+          insert into Some set prop = "value";
+          let $i = $i + 1;
+        }
+        
+        commit;
+        """);
 
-    session.begin();
-    var res = session.execute("insert into V from select from SomeVertex");
+    session.command("begin");
+    var res = session.execute("insert into Some from select from Some");
     for (var i = 0; i < 150; i++) {
       assertTrue(res.hasNext());
       var item = res.next();
       assertEquals("value", item.getProperty("prop"));
     }
-    session.commit();
+    session.command("commit");
   }
 
   @Test(expected = DatabaseException.class)
   public void testQueryKilledSession() {
-    var tx = session.begin();
-    for (var i = 0; i < 150; i++) {
-      var doc = ((EntityImpl) tx.newEntity("Some"));
-      doc.setProperty("prop", "value");
-    }
-    var res = tx.query("select from Some");
+    session.executeSQLScript("""
+        begin;
+        let $i = 0;
+        
+        while ($i < 150) {
+          insert into Some set prop = "value";
+          let $i = $i + 1;
+        }
+        
+        commit;
+        """);
+
+    var res = session.query("select from Some");
 
     for (var conn : server.getClientConnectionManager().getConnections()) {
       conn.close();
@@ -109,149 +137,108 @@ public class RemoteQuerySupportTest extends BaseServerMemoryDatabase {
       var item = res.next();
       assertEquals("value", item.getProperty("prop"));
     }
-    tx.commit();
   }
 
   @Test
   public void testQueryEmbedded() {
-    session.begin();
-    var doc = ((EntityImpl) session.newEntity("Some"));
-    doc.setProperty("prop", "value");
-    var emb = ((EntityImpl) session.newEmbeddedEntity());
-    emb.setProperty("one", "value");
-    doc.setProperty("emb", emb, PropertyType.EMBEDDED);
-    session.commit();
-
-    var tx = session.begin();
-    var res = tx.query("select emb from Some");
+    session.executeSQLScript("""
+        begin;
+        insert into Some set prop = "value", emb = {"one" : "value"};
+        commit;
+        """);
+    var res = session.query("select emb from Some");
 
     var item = res.next();
     assertEquals("value", item.getProperty("one"));
-    tx.commit();
   }
 
   @Test
   public void testQueryDoubleEmbedded() {
-    session.begin();
-    var doc = ((EntityImpl) session.newEntity("Some"));
-    doc.setProperty("prop", "value");
-    var emb1 = ((EntityImpl) session.newEmbeddedEntity());
-    emb1.setProperty("two", "value");
-    var emb = ((EntityImpl) session.newEmbeddedEntity());
-    emb.setProperty("one", "value");
-    emb.setProperty("secEmb", emb1, PropertyType.EMBEDDED);
+    session.executeSQLScript("""
+        begin;
+        insert into Some set prop = "value", emb = {"one" : "value", secEmb : {"two" : "value"}};
+        commit;
+        """);
 
-    doc.setProperty("emb", emb, PropertyType.EMBEDDED);
-    session.commit();
-
-    var tx = session.begin();
     var res = session.query("select emb from Some");
 
     var resEmb = res.next();
     assertEquals("value", resEmb.getProperty("one"));
-    assertEquals("value", ((Result) resEmb.getProperty("secEmb")).getProperty("two"));
-    tx.commit();
+    assertEquals("value", ((BasicResult) resEmb.getProperty("secEmb")).getProperty("two"));
   }
 
   @Test
   public void testQueryEmbeddedList() {
-    session.begin();
-    var doc = ((EntityImpl) session.newEntity("Some"));
-    doc.setProperty("prop", "value");
-    var emb = ((EntityImpl) session.newEmbeddedEntity());
-    emb.setProperty("one", "value");
+    session.executeSQLScript("""
+        begin;
+        insert into Some set prop = "value", list = [{"one" : "value"}];
+        commit;
+        """);
 
-    List<Entity> list = session.newEmbeddedList();
-    list.add(emb);
-    doc.setProperty("list", list, PropertyType.EMBEDDEDLIST);
-    session.commit();
-
-    var tx = session.begin();
     var res = session.query("select list from Some");
 
     var item = res.next();
     assertNotNull(item.getProperty("list"));
-    assertEquals(1, ((List<Result>) item.getProperty("list")).size());
-    assertEquals("value", ((List<Result>) item.getProperty("list")).get(0).getProperty("one"));
-    tx.commit();
+    assertEquals(1, item.<RemoteResult>getEmbeddedList("list").size());
+    assertEquals("value",
+        item.<RemoteResult>getEmbeddedList("list").getFirst().getProperty("one"));
   }
 
   @Test
   public void testQueryEmbeddedSet() {
-    session.begin();
-    var doc = ((EntityImpl) session.newEntity("Some"));
-    doc.setProperty("prop", "value");
-    var emb = ((EntityImpl) session.newEmbeddedEntity());
-    emb.setProperty("one", "value");
-    Set<EntityImpl> set = session.newEmbeddedSet();
-    set.add(emb);
-    doc.setProperty("set", set, PropertyType.EMBEDDEDSET);
-    session.commit();
-
-    var tx = session.begin();
+    session.executeSQLScript("""
+        create property Some.set EMBEDDEDSET EmbeddedClass;
+        begin;
+        insert into Some set prop = "value", set = [{"one" : "value"}];
+        commit;
+        """);
     var res = session.query("select set from Some");
 
     var item = res.next();
     assertNotNull(item.getProperty("set"));
-    assertEquals(1, ((Set<Result>) item.getProperty("set")).size());
+    assertEquals(1, item.getEmbeddedSet("set").size());
     assertEquals(
-        "value", ((Set<Result>) item.getProperty("set")).iterator().next().getProperty("one"));
-    tx.commit();
+        "value", item.<RemoteResult>getEmbeddedSet("set").
+            iterator().next().getProperty("one"));
   }
 
 
   @Test
   public void testQueryEmbeddedMap() {
-    session.begin();
-    var doc = ((EntityImpl) session.newEntity("Some"));
-    doc.setProperty("prop", "value");
-    var emb = ((EntityImpl) session.newEmbeddedEntity());
-    emb.setProperty("one", "value");
-    Map<String, EntityImpl> map = session.newEmbeddedMap();
-    map.put("key", emb);
-    doc.setProperty("map", map, PropertyType.EMBEDDEDMAP);
-    session.commit();
+    session.executeSQLScript("""
+        begin;
+        insert into Some set prop = 'value', map = {"key" : {"one" : "value"}};
+        commit;
+        """);
 
-    var tx = session.begin();
-    var res = tx.query("select map from Some");
+    var res = session.query("select map from Some");
 
     var item = res.next();
     assertNotNull(item.getProperty("map"));
-    assertEquals(1, ((Map<String, Result>) item.getProperty("map")).size());
+    assertEquals(1, item.getEmbeddedMap("map").size());
     assertEquals(
-        "value", ((Map<String, Result>) item.getProperty("map")).get("key").getProperty("one"));
-    tx.commit();
+        "value",
+        item.<RemoteResult>getEmbeddedMap("map").get("key").getProperty("one"));
   }
 
   @Test
   public void testCommandWithTX() {
-
-    session.begin();
-
-    session.execute("insert into Some set prop = 'value'");
-
-    DBRecord record;
-
-    try (var resultSet = session.execute("insert into Some set prop = 'value'")) {
-      record = resultSet.next().asRecord();
-    }
-
-    session.commit();
-
-    Assert.assertTrue(record.getIdentity().isPersistent());
+    var rid = session.computeSQLScript("""
+        begin;
+        let $res = insert into Some set prop = "value";
+        commit;
+        return $res;
+        """).findFirst(BasicResult::getIdentity);
+    Assert.assertTrue(rid.isPersistent());
   }
 
   @Test(expected = CommandExecutionException.class)
   public void testBrokenParameter() {
     try {
-      var tx = session.begin();
-      tx.query("select from Some where prop= ?", new Object()).close();
+      session.query("select from Some where prop= ?", new Object()).close();
     } catch (RuntimeException e) {
-      Assert.assertFalse(session.isTxActive());
       // should be possible to run a query after without getting the server stuck
-      var tx = session.begin();
-      tx.query("select from Some where prop= ?", new RecordId(10, 10)).close();
-      tx.commit();
+      session.query("select from Some where prop= ?", new RecordId(10, 10)).close();
       throw e;
     }
   }
@@ -261,26 +248,26 @@ public class RemoteQuerySupportTest extends BaseServerMemoryDatabase {
     session.execute("create class testScriptWithRidbagsV extends V");
     session.execute("create class testScriptWithRidbagsE extends E");
 
-    session.begin();
+    session.command("begin");
     session.execute("create vertex testScriptWithRidbagsV set name = 'a'");
     session.execute("create vertex testScriptWithRidbagsV set name = 'b'");
 
     session.execute(
         "create edge testScriptWithRidbagsE from (select from testScriptWithRidbagsV where name ="
             + " 'a') TO (select from testScriptWithRidbagsV where name = 'b');");
-    session.commit();
+    session.command("commit");
 
     var script = "";
     script += "LET q1 = SELECT * FROM testScriptWithRidbagsV WHERE name = 'a';";
     script += "LET q2 = SELECT * FROM testScriptWithRidbagsV WHERE name = 'b';";
     script += "RETURN [$q1,$q2]";
 
-    session.begin();
-    var rs = session.runScript("sql", script);
+    session.command("begin");
+    var rs = session.computeScript("sql", script);
 
     rs.stream().count();
     rs.close();
-    session.commit();
+    session.command("commit");
   }
 
   @Test
@@ -288,13 +275,13 @@ public class RemoteQuerySupportTest extends BaseServerMemoryDatabase {
     session.execute("create class letVertex extends V");
     session.execute("create class letEdge extends E");
 
-    session.begin();
+    session.command("begin");
     session.execute("create vertex letVertex set name = 'a'");
     session.execute("create vertex letVertex set name = 'b'");
     session.execute(
         "create edge letEdge from (select from letVertex where name = 'a') TO (select from"
             + " letVertex where name = 'b');");
-    session.commit();
+    session.command("commit");
 
     var rs =
         session.query(
@@ -302,6 +289,7 @@ public class RemoteQuerySupportTest extends BaseServerMemoryDatabase {
     assertEquals(2, rs.stream().count());
   }
 
+  @Override
   public void afterTest() {
     super.afterTest();
     QUERY_REMOTE_RESULTSET_PAGE_SIZE.setValue(oldPageSize);
